--- a/game.css
+++ b/game.css
@@ -1,8 +1,12 @@
 body {
-    background-color:#A8A8A8;
+    background-color:black;
 }
 header {
 font-family: 'Creepster', cursive;
-color:#6D216C;
+font-size: 28px;
+ text-shadow: 0 0 10px #FF0000;;
+color:#8E2A8D;
 display: flex;
+justify-content: center;
+padding: 10px ;
 }
