--- a/game.css
+++ b/game.css
@@ -1,12 +1,53 @@
+ * {
+    box-sizing: border-box;
+  }
+
 body {
-    background-color:black;
+background-color:black;
 }
 header {
 font-family: 'Creepster', cursive;
-font-size: 28px;
- text-shadow: 0 0 10px #FF0000;;
+font-size: 35px;
+text-shadow: 0 0 15px #FF0000;
 color:#8E2A8D;
 display: flex;
 justify-content: center;
 padding: 10px ;
+}
+section { 
+    
+display: grid;
+grid-template-columns:1fr 1fr 1fr 1fr ;
+grid-template-rows: 3fr 2fr 1fr 1fr ;
+border: 2vmin solid #8E2A8D;
+box-shadow: 0 0 20px #FF0000;
+margin: 0 auto;
+height: 75vh;
+width:90vh;
+}
+p{
+grid-column:1/4;
+grid-row :1/3;
+color:white;
+}
+button{
+    background: none;
+    border: solid, black;
+    box-shadow: #FF0000;
+    cursor: pointer;
+    font-family: 'Creepster', cursive;
+    font-size: 35px;
+    text-shadow: 0 0 15px #FF0000;
+    color:#8E2A8D;
+    /* grid-column:1/4;
+    grid-row :3/4; */
+  
+}
+#btn1{
+grid-column:2/4;
+grid-row :3/4;
+}
+#btn2{
+grid-column:2/4;
+grid-row :4/5;
 }
