--- a/css/game.css
+++ b/css/game.css
@@ -8,7 +8,7 @@
 
 body {
 
-background-image: url('https://i.imgur.com/ERjpHmu.jpg');
+background-color: black;
   background-size: cover;
   height: 100vh;
   padding:0;
@@ -44,13 +44,13 @@ padding: 20px;
 p{
 font-family: 'Cormorant Garamond', serif;
 font-size: 35px;
-text-shadow: 0 0 15px red ;
+text-shadow: 0 0 10px rgb(255, 0, 0) ;
 display:flex;
 justify-content: center;
 grid-column:2/4;
 grid-row:1/3;
 color:white;
-padding:20px;
+padding:10px;
 }
 button{
   background: none;
